# Breakdown-Predictor

./: .gitignore  BreakdownPredict.sln  README.md
BreakdownPredict/: BreakdownPredict.sln  CMakeLists.txt
BreakdownPredict/BreakdownPredict/: BreakdownPredict.vcxproj  BreakdownPredict.vcxproj.filters  CMakeLists.txt  MyAdd.cpp  MyAdd.h  compress.cpp  compress.h  correlation.cpp  correlation.h  main.cpp
BreakdownPredict/BreakdownPredict/Debug/: MyAdd.nativecodeanalysis.sarif  compress.nativecodeanalysis.sarif  compress.nativecodeanalysis.xml  correlation.nativecodeanalysis.sarif  main.nativecodeanalysis.sarif  vc.nativecodeanalysis.all.xml  vc142.idb
BreakdownPredict/BreakdownPredict/Debug/BreakdownPredict.tlog/: BreakdownPredict.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
BreakdownPredict/BreakdownPredict/headers/: CreateData.h  MyAdd.h
BreakdownPredict/BreakdownPredict/include/: MyAdd.h  correlation.h
BreakdownPredict/BreakdownPredict/src/: MyAdd.cpp  compress.cpp  correlation.cpp  main.cpp
BreakdownPredict/BreakdownPredict/x64/Debug/: vc142.idb
BreakdownPredict/BreakdownPredict/x64/Debug/BreakdownPredict.tlog/: BreakdownPredict.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
BreakdownPredict/Correlation/: sht38405-corr.txt
BreakdownPredict/Debug/: BreakdownPredict.ilk
BreakdownPredict/OpenXLSX/: CMakeLists.txt
BreakdownPredict/Selected/: Selected.txt
BreakdownPredict/headers/: CreateData.h  MyAdd.h  compress.h  correlation.h
BreakdownPredict/source/: CreateData.cpp  MyAdd.cpp  correlation.cpp  main.cpp
BreakdownPredict/x64/Debug/: BreakdownPredict.ilk
BreakdownPredict/x64/Debug/Output/: sht32268.sht
(+3 files in other folders)
